2008-01-04  John W. Eaton  <jwe@octave.org>

	* symtab.h (symbol_table:pop_scope): Avoid accessing beyond end of
	scope_stack.

2008-01-04  David Bateman  <dbateman@free.fr>

	* ov-mapper.cc (SPARSE_MAPPER_LOOP_2): Use data method instead of
	elem in the case where F(0) is non-zero.

2007-12-28  John W. Eaton  <jwe@octave.org>

	Merge changes from object branch:

	2007-12-12  John W. Eaton  <jwe@octave.org>

	* load-path.cc (load_path::dir_info::get_file_list,
	load_path::move_method_map, load_path::remove_method_map,
	load_path::do_find_fcn, load_path::do_find_private_fcn,
	load_path::do_find_method, load_path::do_find_file,
	load_path::do_find_first_of, load_path::do_find_all_first_of,
	load_path::do_display, load_path::add_to_method_map, genpath,
	execute_pkg_add_or_del): Use file_ops::concat.

	2007-08-24  John W. Eaton  <jwe@octave.org>

	* variables.cc (Fmislocked): return value for nargin == 0 case.

	2007-07-27  John W. Eaton  <jwe@octave.org>

	* pt-idx.cc (tree_index_expression::rvalue):
	Pass substring of type to subsref when doing partial evaluation.
	(tree_index_expression::lvalue): Likewise.

	2007-06-29  John W. Eaton  <jwe@octave.org>

	* ov-class.cc (is_built_in_class, set_class_relationship,
	Fsuperiorto, Finferiorto): New functions.
	(octave_class::in_class_method): New function.
	(octave_class::subsref, octave_class:subsasgn): Use it.

	2007-06-28  John W. Eaton  <jwe@octave.org>

	* src/ov-class.cc (sanitize): New function.
	(make_idx_args): Use it.

	2007-06-28  John W. Eaton  <jwe@octave.org>

	* src/ov-class.cc (octave_class::subsasgn): Expect and use only
	one return value from feval of subsasgn method.

	* ov.cc (octave_value::assign): Don't convert to struct if
	indexing a class object with ".".

	* pt-idx.cc (tree_index_expression::make_arg_struct):
	Use Cell instead of octave_value_list for subscripts.

	* ov-class.cc (make_idx_args): For "." index, subs field is
	string, not cell.

	2007-06-27  John W. Eaton  <jwe@octave.org>
